fix rendering